# hl-swing-bot

./: BACKTEST_NOTES.md  pyproject.toml
.github/workflows/: strategy.yml
data/: market.duckdb
scratch/: .gitignore  adv_verify_slope.py  entry_filters.py  exit_engineering.py  exit_grid.py  exit_sweep.py  features_cache.parquet  fetch_eth_sol.py  fetch_flow_data.py  fetch_funding.py  flow_results.json  funding_1h.parquet  funding_alpha.py  funding_alpha2.py  funding_alpha3.py  funding_btc.json  funding_eth_verify.json  funding_sol_verify.json  hist_1h_eth.parquet  hist_1h_sol.parquet  liq_1h.json  liq_daily.json  multicoin_test.py  oi_1h.json  portfolio.py  precompute_features.py  probe_sources.py  regime_overlay.py  regime_overlay2.py  run_coin.py  sensitivity_fz.py  sigs_btc.json  sigs_eth.json  sigs_sol.json  slope_robustness.py  slope_validation.py  test_flow_gates.py  variants.py  verify_exit2.py  verify_exit_engineering.py  (+14 more)
scripts/: walkforward.py
src/hl_swing_bot/: backtest.py  features.py  publisher.py  signal.py  storage.py  strategy_runner.py
