[project]
name = "hl-swing-bot"
version = "0.1.0"
description = "Hyperliquid BTC swing trading bot — Phase 0: data collection"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "tenacity>=8.0",
    "duckdb>=1.0",
    "polars>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
ml = [
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "mplfinance>=0.12",
]

[project.scripts]
hl-collect = "hl_swing_bot.collector:main"
hl-notify = "hl_swing_bot.notify:main"
hl-strategy = "hl_swing_bot.strategy_runner:main"
hl-backtest = "hl_swing_bot.backtest:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
